Fixed log in and registration form alignment issues

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,10 +1,13 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
+
+.login-container{
+  display: block;
+  width: 60%;
+  margin: 100px auto;
+}
+.login-form {
+  width: 100%;
+}
+
+.login-full-width {
+  width: 100%;
+}
